frontends/firrtl/tests/bad/tabs_and_spaces.fir
circuit MyTop :
    module MyTop :
    	skip
    module MyModule :
    	skip
